Fixed padding on mobile devices

--- a/app/assets/stylesheets/_commons.css.scss
+++ b/app/assets/stylesheets/_commons.css.scss
@@ -14,7 +14,12 @@ $large-device: 1400px;
   border: 1px solid #E9E9E9;
   box-shadow: 0 0 10px rgba(0,0,0,0.75);
   color: $text-color;
-  padding: 15px 25px;
+  
+  padding: 15px 5px;
+  
+  @media(min-width: $extra-small-device) {
+    padding: 15px 25px;
+  }
   @media(min-width: $medium-device) {
     padding: 15px 50px;
   }
